set up functionality for login page

--- a/app/public/login.html
+++ b/app/public/login.html
@@ -10,7 +10,7 @@
                 <input type="text" id="user-input" placeholder="Enter your username"/>
                 <input type="text" id="pass-input" placeholder="Enter your password"/>
                 <button id="login-button">Login</button>
-                <button id="new-account-button">Create a New Account</button>
+                <button id="register-button">Register</button>
             </form>
         </div>
         
