--- a/app/public/signup.html
+++ b/app/public/signup.html
@@ -7,6 +7,7 @@
     <body>
 
         <div id="registration">
+            <p>Register Here</p>
             <form id="registration-form">
                 <label for="username">Username:</label>
                 <input type="text" id="username" name="username" required>
@@ -16,6 +17,8 @@
                 <br>
                 <button type="submit">Register</button>
             </form>
+            <br>
+            <button id="return-to-login">Return to Login</button>
         </div>
         
         <script src="signup.js"></script>
